msr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: msr-poc-umapp
spec:
  selector:
    app: msr-poc-umapp
  ports:
    - name: tcp-9000
      protocol: TCP
      port: 80
      targetPort: 5555
